test/hotCases/errors/events/h.js
import i from "./i";

if(module.hot) {
	module.hot.accept("./i");
}
